<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/ic_drawer_home"
            android:checked="true"
            android:title="@string/navigation_item_job" />
        <item
            android:id="@+id/nav_enter"
            android:icon="@drawable/ic_drawer_roundtable"
            android:title="@string/navigation_item_enterprise" />
        <item
            android:id="@+id/nav_apply"
            android:icon="@drawable/ic_drawer_explore"
            android:title="@string/navigation_item_apply" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_drawer_collect"
            android:title="@string/navigation_item_collect" />
    </group>


    <group android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/navigation_item_location"/>

        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_drawer_settings"-->
            <!--android:title="@string/action_settings"/>-->

    </group>

</menu>
