<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cc.coocol.jinxiujob.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_marginTop="49dp"
        android:hint="@string/hint_input_phone"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_marginTop="35dp"
        android:hint="@string/hint_input_password"
        android:layout_below="@+id/phone"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/login"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="找回密码"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:id="@+id/forget"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

</RelativeLayout>
